[package]
name = "wow-windmedia"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
description = "Rust library for managing World of Warcraft SharedMedia (LibSharedMedia-3.0) assets — fonts, textures, sounds, borders, and statusbars"
readme = "README.md"
repository = "https://github.com/wind-addons/wow-windmedia"
documentation = "https://docs.rs/wow-windmedia"
homepage = "https://github.com/wind-addons/wow-windmedia"
keywords = ["wow", "sharedmedia", "addon", "libsharedmedia", "media"]
categories = ["game-development", "multimedia"]
include = ["src/**/*", "templates/**/*", "vendor/**/*", "README.md", "LICENSE", "Cargo.toml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["tga", "webp", "png", "jpeg"] }
wow-blp = "0.6"

# Audio
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "isomp4", "aac"] }
vorbis_rs = "0.5"

# Font
ttf-parser = "0.25"

# Lua runtime
mlua = { version = "0.10", features = ["luajit", "vendored"] }

# Utilities
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
